@@ -84,6 +84,8 @@ int uip_backlogcreate(FAR struct uip_conn *conn, int nblg)
   int offset;
   int i;
 
+  nvdbg("conn=%p nblg=%d\n", conn, nblg);
+
 #ifdef CONFIG_DEBUG
   if (!conn)
     {
@@ -114,6 +116,7 @@ int uip_backlogcreate(FAR struct uip_conn *conn, int nblg)
       bls = (FAR struct uip_backlog_s *)zalloc(size);
       if (!bls)
         {
+          ndbg("Failed to allocate backlog\n");
           return -ENOMEM;
         }
 
@@ -163,6 +166,8 @@ int uip_backlogdestroy(FAR struct uip_conn *conn)
   FAR struct uip_backlog_s     *blg;
   FAR struct uip_blcontainer_s *blc;
   FAR struct uip_conn          *blconn;
+
+  nvdbg("conn=%p\n", conn);
 
 #ifdef CONFIG_DEBUG
   if (!conn)
@@ -222,6 +227,8 @@ int uip_backlogadd(FAR struct uip_conn *conn, FAR struct uip_conn *blconn)
   FAR struct uip_blcontainer_s *blc;
   int ret = -EINVAL;
 
+  nvdbg("conn=%p blconn=%p\n", conn, blconn);
+
 #ifdef CONFIG_DEBUG
   if (!conn)
     {
@@ -237,6 +244,7 @@ int uip_backlogadd(FAR struct uip_conn *conn, FAR struct uip_conn *blconn)
        blc = (FAR struct uip_blcontainer_s *)dq_remfirst(&bls->bl_free);
        if (!blc)
          {
+           ndbg("Failed to allocate container\n");
            ret = -ENOMEM;
          }
        else
@@ -277,8 +285,9 @@ struct uip_conn *uip_backlogremove(FAR struct uip_conn *conn)
       return NULL;
     }
 #endif
+
   bls = conn->backlog;
-  if (bls && blconn)
+  if (bls)
     {
        /* Remove the a container at the head of the pending connection list
         * (FIFO)
@@ -296,6 +305,8 @@ struct uip_conn *uip_backlogremove(FAR struct uip_conn *conn)
            dq_addlast(&blc->bc_node, &bls->bl_free);
          }
     }
+
+  nvdbg("conn=%p, returning %p\n", conn, blconn);
   return blconn;
 }
 
@@ -317,12 +328,15 @@ int uip_backlogdelete(FAR struct uip_conn *conn, FAR struct uip_conn *blconn)
   FAR struct uip_backlog_s     *bls;
   FAR struct uip_blcontainer_s *blc;
 
+  nvdbg("conn=%p blconn=%p\n", conn, blconn);
+
 #ifdef CONFIG_DEBUG
   if (!conn)
     {
-      return NULL;
+      return -EINVAL;
     }
 #endif
+
   bls = conn->backlog;
   if (bls)
     {
@@ -340,6 +354,8 @@ int uip_backlogdelete(FAR struct uip_conn *conn, FAR struct uip_conn *blconn)
                 return OK;
               }
           }
+
+        ndbg("Failed to find pending connection\n");
         return -EINVAL;
     }
   return OK;
